--- a/css/common.css
+++ b/css/common.css
@@ -38,8 +38,16 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background: var(--color-theme);
-}
+    background: linear-gradient(to right, #00594c, rgb(1, 128, 106) );
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    border-style: solid;
+    border-color: #5df2d6;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+  
+}   
 
 nav>ul {
     display: flex;
@@ -111,6 +119,11 @@ footer {
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-style: solid;
+    border-top-color:#5df2d6;
+    border-bottom: 0px;
+    border-right: 0px;
+    border-left: 0px;
 }
 
 footer p {
